--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
 .App {
   text-align: center;
+  margin-top: 50px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-logo {
+  max-width: 100%;   /* Asegura que la imagen no exceda el ancho del contenedor */
+  height: auto;      /* Mantiene la relación de aspecto de la imagen */
+  display: block;    /* Evita cualquier espacio en blanco extra alrededor de la imagen */
+  margin-left: auto; /* Centra la imagen horizontalmente */
+  margin-right: auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.gauges {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.gauge-container {
+  margin-left: 15px;
+  margin-right: 15px;
+  text-align: center; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.gauges h3 {
+  margin-bottom: 10px;
+}
+
+
+
+.plots-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.plots{
+  width: 30%;
+  height: 300px;
+}
+
+/* Estilos para pantallas pequeñas */
+@media (max-width: 768px) {
+  .plots-container {
+    flex-direction: column;
+    align-items: flex-start;
   }
-  to {
-    transform: rotate(360deg);
+  .plots{
+    width: 300px;
+    height: 250px;
   }
 }
+
